--- a/Module3/css/style.css
+++ b/Module3/css/style.css
@@ -1,12 +1,12 @@
 .wrapper {
     width: 1366px;
-    margin: 0 auto;
 }
 
 .conteiner {
     box-shadow: 2px 4px 5px 0px rgba(0, 0, 0, 0.3);
     width: 1060px;
     margin: 0 auto;
+    align-content: center;    
 }
 
 header {
@@ -37,9 +37,13 @@ header {
     line-height: 29.333px;
     text-align: justify;
     text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+    text-decoration: none;
+    height: 40px;
+    text-align: center;
+    display: block;
 }
 .main_menu a:hover {
-    color: black;
+    background-color: black;
     border: 1px solid blue;
 }
 
