after full work

--- a/Module3/css/style.css
+++ b/Module3/css/style.css
@@ -43,6 +43,7 @@ header {
     text-align: center;
     display: block;
 }
+
 .main_menu a:hover {
     background-color: black;
     border: 1px solid lightgrey;
@@ -57,15 +58,25 @@ header {
 }
 
 .left_sidebar {
-    display: block;
-    border-style: solid;
-    border-width: 1px;
-    border-color:  #c8c8c8;
-    box-sizing: border-box;
-    background-color:  #ffffff;
+    margin-right: 50px;
     width: 240px;
-    height: 235px;
     float: left;
+    position: relative;
+    overflow: hidden;
+}
+
+.left_sidebar li{
+    text-decoration: none;
+    list-style: none;
+    line-height: 40px;
+}
+
+ul.menu>li:hover {                    
+    border-left: 1px solid #838383;
+    border-right: 1px solid #838383;
+    background-color: #464646;
+    width: 238px;
+    height: 39px;          
 }
 
 .left_sidebar a {
@@ -99,7 +110,7 @@ header {
     border: 1px solid #c8c8c8;
     box-sizing: border-box;
     background-color:  #ffffff;
-    width: 678px;
+    width: 676px;
     height: 400px;
     float: right;
     text-align: center;
@@ -125,6 +136,12 @@ header {
     margin: auto;
 }
 
+.footer ul{
+ display: inline-block;
+ margin: 0;
+ 
+}
+
 .footer ul li {
     display: inline-block;
     width: 124px;
@@ -139,6 +156,10 @@ header {
     text-decoration: none;
     text-align: justify;
     padding: 15px;
+}
+
+.footer a:hover {
+    text-decoration: underline;
 }
 
 .sometext {
