--- a/Module3/css/style.css
+++ b/Module3/css/style.css
@@ -12,6 +12,7 @@ header {
     width: 967px;
     height: 120px;
     margin: auto;
+    margin-top: 4px;
 }
 
 .main_menu {
@@ -65,7 +66,7 @@ header {
     overflow: hidden;
 }
 
-.left_sidebar li{
+.left_sidebar li {
     text-decoration: none;
     list-style: none;
     line-height: 40px;
@@ -77,6 +78,14 @@ ul.menu>li:hover {
     background-color: #464646;
     width: 238px;
     height: 39px;          
+}
+
+.sidebar {
+    margin-right: 50px;
+    width: 240px;
+    float: left;
+    position: relative;
+    overflow: hidden;
 }
 
 .left_sidebar a {
@@ -97,6 +106,7 @@ ul.menu>li:hover {
     background-color:  #f9f9f9;
     width: 238px;
     height: 37px;
+    padding-left: 12px;
 }
 
 .content {
