--- a/Module 4/css/style.css
+++ b/Module 4/css/style.css
@@ -1,41 +1,229 @@
 body {
 	background-image: url(../img/background.jpg);
- 	background-repeat: no-repeat;
- 	background-size: cover;
+	background-repeat: no-repeat;
+	background-size: cover;
+	font-family: "Tahoma", "Arial", sans-serif;
 }
 
 .wrapper {
- 	display: block;
- 	width: 1018px;
-	height: 991px;
-	border: 1px solid white;
-	box-shadow: 13px 0px 34px -9px rgba(0,0,0,0.66);
-	background-color: white;
-	margin: 0 auto;
+	max-width: 1000px;
+	margin: 38px auto 0;
+	background: #fff;
+	overflow: hidden;
+	box-shadow: 0px 5px 16px 1px rgba(0,0,0,0.75);
 }
 
-.main_content {
-	margin: auto;
+.main_page {
+	border: 1px solid white;
+	box-shadow: 13px 0px 34px -9px rgba(0, 0, 0, 0.66);
+	background-color: white;
+	padding: 7px 30px 0;
+	overflow: hidden;
+}
+
+.logo {
+	width: 283px;
+	height: 164px;
+	display: inline-block;
+	vertical-align: bottom;
+}
+
+.contcount {
+	width: 340px;
+	float: right;
 }
 
 .contacts {
-	padding: 5px;
 	width: 130px;
-	height: 67px;
-	display: inline-block;
-	font-family: Tahoma;
-	color:  #128aa7;
+	color: #128aa7;
 	font-size: 12px;
+	line-height: 20px;
 	font-weight: 400;
 	text-align: left;
-	margin: auto;
+	display: block;
+	float: right;
+}
+
+.clearfix {
+	clear: both;
 }
 
 .countries {
-	display: block;
-	margin: auto;
+	margin: auto; 
+	display: inline-block;
+	float: right;
+	margin-top: 22px;
 }
 
-.countries a {
+.countries li {
 	display: inline-block;
+	width: 52px;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.countries li a {
+	vertical-align: middle;
+	color: #128aa7;
+	font-size: 10px;
+	font-weight: 400;
+	text-decoration: underline;
+}
+
+.countries img {
+	box-sizing: border-box;
+	display: block;
+}
+
+.main_content,
+.content {
+	width: 100%;
+	position: relative;
+}
+
+.main_photo {
+	width: 100%;
+	border-top: solid 1px black;
+	height: 241px;
+	border-bottom: 1px solid #128aa7;
+}
+
+.nav_menu {
+  background: #373737;
+  background: linear-gradient(to top, #373737, #313131);
+  height: 28px;
+  border-bottom: 1px solid black;
+}
+
+ul {
+    display: block;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul:after {
+    display: block;
+    content: ' ';
+    clear: both;
+    float: none;
+}
+
+ul.menu > li {
+    float: left;
+    position: relative;
+}
+
+ul.menu li:hover {
+background-color: none;
+
+}
+
+ul.menu > li > a {
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+    margin-left: 60px;
+    padding: 5px 0 5px 0;
+    vertical-align: middle;
+    text-decoration: none;
+    color: white;
+}
+
+ul.menu > li > a:hover {
+    color: #c1c1c1;
+}
+
+ul.submenu {
+    display: none;
+    position: absolute;
+    width: 150px;
+    top: 29px;
+    left: 50px;
+    background-color: white;
+    -webkit-box-shadow: 1px 5px 11px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 5px 11px -2px rgba(0,0,0,0.75);
+    box-shadow: 1px 5px 11px -2px rgba(0,0,0,0.75);
+}
+
+ul.submenu > li {
+    display: block;
+}
+
+ul.submenu > li > a {
+    display: block;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 8px;
+    color: white;
+    background-color: #303030;
+    text-decoration: none;
+}
+
+ul.submenu > li > a:hover {
+    text-decoration: underline;
+}
+
+ul.menu > li:hover > ul.submenu {
+    display: block;
+}
+
+.menu i {
+  font-size: 10px;
+}
+
+.left_panel {
+	display: inline-block;
+	float: left;
+	width: 210px;
+	height: 581px;
+	text-align: center;
+	margin: auto;
+	background-color: #edeef0;
+	border-right: 1px solid #c7cacf;
+}
+
+.left_panel p {
+	color: #424c43;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 22px;
+	padding: 0 25px 1px 15px;
+}
+
+.right_panel {
+	display: inline-block;
+	float: right;
+	width: 210px;
+	height: 581px;
+	text-align: center;
+	margin: auto;
+	background-color: #edeef0;
+	border: 1px solid #c7cacf;
+}
+
+.right_panel p {
+	color: #424c43;
+	font-size: 12px;
+	font-weight: 400;
+	line-height: 22px;
+	padding: 0 25px 1px 15px;
+}
+
+h3 {
+	font-weight: bold;
+	padding: 5px 0 5px 0;
+}
+
+.footer {
+	width: 100%;
+	color: rgba(255, 255, 255, 0.8);
+	font-size: 12px;
+	font-weight: 500;
+	text-align: center;
+/*	padding-top: 8px; */
+	padding: 10px 0;
 }
